# StrawberryBench

./: .gitignore  README.md  benchmark.py  client.py  client_anthropic.py  client_google_studio.py  client_google_vertex.py  client_openai.py  client_openrouter.py  config.py  plot.py  pyproject.toml  requirements.txt  results.json  ruff.toml  utils.py
results/: results.json
src/: client.py  config.py
src/clients/: anthropic.py  google_studio.py  google_vertex.py  openai.py  openrouter.py
