[project]
name = "strawberrybench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.16",
    "aiolimiter>=1.2.1",
    "anthropic>=0.49.0",
    "google-cloud-aiplatform>=1.88.0",
    "google-genai>=1.10.0",
    "matplotlib>=3.10.1",
    "openai>=1.72.0",
    "openrouter>=1.0",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.11.0",
]
